--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="UTF-8">
@@ -71,10 +72,6 @@
 <td>
 </tr>
 </table>
-
-
-
-
 <hr size="3">
 <h3><strong><a href="Contacts.html">Contact me!</a></strong></h3>
 </body>
