--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
    <table cellspacing="20">
       <tr>
-         <td><img src="C:\Users\Jakub\Desktop\Web development\HTML\kubaimage.jpeg"></td>
+         <td><img src="kubaimage.jpeg"></td>
          <td><h1>Jakub Havrda</h1>
             <p>Country of Origin: <a href="https://en.wikipedia.org/wiki/Czech_Republic"><strong>Czech Republic</strong></a></p>
             <p><em>The Department of <strong><a href="https://en.wikipedia.org/wiki/Procrastination">Procrastination</a></strong></em></p>
